Fixed issue #1017, which topic title word break in some case.

--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -240,6 +240,7 @@
       a:link,
       a:visited {
         color: #222; font-weight: 400; line-height: 30px;
+        word-break: break-all;
         .node { color: #777; margin-right: 3px; }
       }
       a:active,
